improving error responses for Empty Result Data Access Exception